2014-02-26  Kaz Kylheku  <kaz@kylheku.com>

	Version 81

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOTES, txr.vim: Updated.

2014-02-26  Kaz Kylheku  <kaz@kylheku.com>

	* parser.l (regex_parse, lisp_parse): Better formatting
	for the context string that serves in place of a filename.

2014-02-26  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (expand_place): Unnecessary, buggy function removed.
	It was handling silly special cases with the net effect of being
	nearly equivalent to just expand, while failing to expand places
	which are compound macro calls. It did diagnose nonexistent place
	types at expansion time, which isn't worth much.
	(expand): All the expansions for the mutating operator sset, inc, dec,
	push, pop and flip were also pointless and have been removed.  they did
	the precise equivalent of doing expand(rest(form)), and consing the
	symbol to the front, which is the fallback case for function call
	forms.

2014-02-25  Kaz Kylheku  <kaz@kylheku.com>

	* configure: Make it an error to have implicit function declarations by
	means of -Werror=implicit-function-declarations.  Fix broken mkdir and
	mknod tests. Regenerate config.make if we add -U__STRICT_ANSI__
	to the compiler options, so that later tests benefit from this.
	Regenerate config.make right away if adding -D_DARWIN_C_SOURCE.
	This allows the makedev test to pass.

	* stream.c: Include <sys/types.h> for makedev.
	(mknod_wrap): Don't rely on makedev wrappers to be there; test.

2014-02-25  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y (spec): Bugfix: SECRET_ESCAPE_E should use n_expr
	not expr. expr is subject to expand_meta.
	(n_expr): Do not associate source info with character
	literals.
	(expand_meta): Bugfix: when walking forms in a collecting loop,
	propagate the source info to them. Bugfix: attach source
	info to var and expr expansions.
	(rl): Rewritten in terms of rlset.